# C3DEngine

./: .clang-format  .gitignore  BuildAll.bat  BuildGameLibrary.bat  BuildShaders.bat  BuildShaders.sh  BuildTests.bat  CMakeLists.txt  CMakeSettings.json  CleanAll.bat  CleanBuild.bat  Folder.DotSettings  README.md  SetupEnv.bat  cpp.hint  renderdoc_settings.cap
AssetConverter/: CMakeLists.txt  ConverterState.cpp  ConverterState.h  Gltf.cpp  Gltf.h  main.cpp
AssetLibrary/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  PrefabAsset.cpp  PrefabAsset.h  TextureAsset.cpp  TextureAsset.h
C3DEngine/: CMakeLists.txt  main.cpp
C3DEngine/core/: Allocator.cpp  Allocator.h  CMakeLists.txt  Logger.cpp  Logger.h  Math.cpp  Math.h  Utils.cpp  Utils.h  VkDeletionQueue.h  VkEngine.cpp  VkEngine.h  VkFrame.h  VkInitializers.cpp  VkInitializers.h  VkMesh.cpp  VkMesh.h  VkObjects.h  VkPipeline.cpp  VkPipeline.h  VkPushBuffer.cpp  VkPushBuffer.h  VkRenderObject.h  VkTextures.cpp  VkTextures.h  VkTypes.h
C3DEngine/core/materials/: CMakeLists.txt  EffectBuilder.cpp  EffectBuilder.h  Material.cpp  Material.h  MaterialSystem.cpp  MaterialSystem.h  VkPipelineBuilder.cpp  VkPipelineBuilder.h
C3DEngine/core/renderer/: CMakeLists.txt  CullParams.h  DepthPyramid.h  Mesh.cpp  Mesh.h  RenderPass.cpp  RenderPass.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h
C3DEngine/core/shaders/: CMakeLists.txt  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorBuilder.cpp  DescriptorBuilder.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  Shader.h  ShaderCache.cpp  ShaderCache.h  ShaderDescriptorBinder.cpp  ShaderDescriptorBinder.h  ShaderEffect.cpp  ShaderEffect.h  ShaderModule.cpp  ShaderModule.h
editor/executable/: CMakeLists.txt
editor/executable/src/: main.cpp
editor/lib/: CMakeLists.txt
editor/lib/src/: editor_main.cpp  editor_main.h  editor_state.h  editor_types.h
engine/: CMakeLists.txt
engine.core/: CMakeLists.txt
engine.core/src/: colors.h  defines.h  exceptions.h  formatters.h  frame_data.h
engine.core/src/asserts/: asserts.cpp  asserts.h
engine.core/src/containers/: array.h  circular_buffer.h  dynamic_array.h  handle_table.h  hash_map.h  hash_table.h  iterator.h  queue.h  ring_queue.h  stack.h
engine.core/src/cson/: cson_reader.cpp  cson_reader.h  cson_types.cpp  cson_types.h  cson_writer.cpp  cson_writer.h
engine.core/src/functions/: function.h
engine.core/src/identifiers/: handle.h  uuid.h
engine.core/src/input/: buttons.h  input_state.h  keys.h
engine.core/src/logger/: logger.cpp  logger.h
engine.core/src/math/: c3d_math.h  disc.h  frustum.cpp  frustum.h  math_types.h  plane.cpp  plane.h  ray.cpp  ray.h
engine.core/src/memory/: free_list.cpp  free_list.h  global_memory_system.cpp  global_memory_system.h
engine.core/src/metrics/: metrics.cpp  metrics.h  types.h
engine.core/src/parsers/: cson_parser.cpp  cson_parser.h  cson_types.cpp  cson_types.h
engine.core/src/platform/: file_system.cpp  file_system.h  platform.h  platform_types.h  platform_win32.cpp
engine.core/src/random/: random.h
engine.core/src/string/: cstring.h  string.h  string_utils.h
engine.core/src/time/: clock.cpp  clock.h  scoped_timer.cpp  scoped_timer.h
engine.runtime/: CMakeLists.txt
engine.runtime/src/: application.cpp  application.h  engine.cpp  engine.h  entry.h
engine.runtime/src/audio/: audio_emitter.h  audio_file.cpp  audio_file.h  audio_plugin.h  audio_types.h
engine.runtime/src/console/: console.cpp  console.h  console_sink.cpp  console_sink.h
engine.runtime/src/cvars/: cvar.h
engine.runtime/src/dynamic_library/: dynamic_library.cpp  dynamic_library.h  game_library.cpp  game_library.h
engine.runtime/src/ecs/: component_pool.h  ecs.h  ecs_types.h  entity.h  entity_description.h
engine.runtime/src/graphs/: hierarchy_graph.cpp  hierarchy_graph.h
engine.runtime/src/jobs/: job.cpp  job.h  job_types.h
engine.runtime/src/renderer/: camera.h  geometry.h  geometry_utils.h  render_buffer.h  render_target.h  renderer_frontend.cpp  renderer_frontend.h  renderer_plugin.h  renderer_types.h  renderer_utils.h  viewport.cpp  viewport.h
engine.runtime/src/resources/: font.h  mesh.cpp  mesh.h  resource_types.h  skybox.cpp  skybox.h
engine.runtime/src/systems/: system.h  system_manager.cpp  system_manager.h
engine/src/: entry.h
engine/src/containers/: array.h  circular_buffer.h  const_iterator.h  cstring.h  dynamic_array.h  freelist.cpp  freelist.h  hash_map.h  hash_table.h  iterator.h  queue.h  ring_queue.h  stack.h  string.h
engine/src/core/: application.cpp  application.h  asserts.cpp  asserts.h  c3d_string.cpp  c3d_string.h  callable.h  clock.cpp  clock.h  colors.h  console.cpp  console.h  console_sink.cpp  console_sink.h  defines.h  engine.cpp  engine.h  event.cpp  event.h  exceptions.h  formatters.h  frame_data.h  identifier.cpp  identifier.h  input.cpp  input.h  logger.cpp  logger.h  memory.cpp  memory.h  metrics.cpp  metrics.h  random.cpp  random.h  scoped_timer.cpp  scoped_timer.h  string_utils.cpp  string_utils.h  utils.cpp  utils.h  (+2 more)
engine/src/math/: c3d_math.cpp  c3d_math.h  disc.h  frustum.cpp  frustum.h  geometry_utils.cpp  geometry_utils.h  math_types.h  plane.cpp  plane.h  ray.cpp  ray.h
engine/src/memory/: dynamic_allocator.cpp  dynamic_allocator.h  free_list.cpp  free_list.h  freelist.cpp  freelist.h  global_memory_system.cpp  global_memory_system.h  linear_allocator.cpp  (+1 more)
src/: CMakeLists.txt  main.cpp  vk_deletion_queue.h  vk_engine.cpp  vk_engine.h  vk_frame.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_render_object.h  vk_texture.cpp  vk_texture.h  vk_types.h
testenv/: CMakeLists.txt
testenv/assets/: application_config.cson
testenv/executable/: CMakeLists.txt
testenv/lib/: CMakeLists.txt
testenv/src/: game.cpp  game.h  main.cpp
tests/: CMakeLists.txt
tests/src/: expect.h  main.cpp  test_app.cpp  test_app.h  test_manager.cpp  test_manager.h  util.h
tools/texture_tools/: CMakeLists.txt
(+744 files in other folders)
